added embed data

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dante Trisciuzzi</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
         <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="style/main.css">
+
+        <meta content="Trisciuzzi.Dev" property="og:title" />
+        <meta content="Dante Trisciuzzi" property="og:description" />
+        <meta content="https://trisciuzzi.dev" property="og:url" />
+        <meta content="https://trisciuzzi.dev/assets/img/card.png" property="og:image" />
+        <meta content="#6A2C70" data-react-helmet="true" name="theme-color" />
     </head>
     
 
     <body class="dark-theme">
         <div id="prevent-selection">
             <div>
-                <input id="theme_swap" class="svg-filter" type="image" src="assets/img/moon-icon.svg"/>
+                <input id="theme_swap" class="svg-filter" type="image" src="assets/img/sun-warm-icon.svg"/>
             </div>
 
             <div class="vert-center">
